# realme_neo8-AndroidB-kernel-source

./: 1  BUILD.bazel  Kconfig.msm  Kconfig.oplus  build.config.msm.autogvm.lv  build.config.msm.bengal  build.config.msm.canoe  build.config.msm.hamoa  build.config.msm.vienna.le  build.targets  build_with_bazel.py  common_sources.bzl  device.bazelrc  files_gki_aarch64.txt  target_variants.bzl
android/: ACK_SHA
arch/arm64/: Kconfig.platforms
arch/arm64/configs/: consolidate.fragment  generic_auto_debug.fragment  generic_auto_defconfig  generic_le_defconfig  generic_vm_defconfig
configs/: autogvm_perf.bzl  autogvmlv.bzl  autogvmlv_debug.bzl  bengal_consolidate.bzl  bengal_perf.bzl  canoe_consolidate.bzl  canoe_le.bzl  canoe_le_debug.bzl  canoe_perf.bzl  canoe_tuivm.bzl  gen3auto_perf.bzl  hamoa_consolidate.bzl  hamoa_perf.bzl  lahaina_consolidate.bzl  lahaina_perf.bzl  sun_perf.bzl  sun_tuivm.bzl  vienna_le.bzl  vienna_le_debug.bzl  vienna_perf.bzl  x1p42100_perf.bzl
drivers/: modules.bzl
drivers/block/: modules.bzl
drivers/block/zram/: hybridswap  hybridswap_zram_drv.h  modules.bzl  zcomp.c  zram_drv.c  zram_drv.h
drivers/clk/qcom/: Kconfig  av1ecc-x1p42100.c  camcc-x1p42100.c  clk-alpha-pll.c  clk-debug.c  clk-rpmh.c  clk-smd-rpm.c  debugcc-khaje.c  dispcc-khaje.c  dispcc-sc7280.c  dispcc-sun.c  dispcc-x1e80100.c  gcc-chora.c  gcc-khaje.c  gcc-sun.c  gcc-x1e80100.c  gcc-x1p42100.c  gdsc-debug.c  gdsc.c  gdsc.h  gpucc-canoe.c  gpucc-khaje.c  gpucc-x1e80100.c  gpucc-x1p42100.c  lpassaoncc-khaje.c  lpassaudiocc-khaje.c  modules.bzl  tcsrcc-chora.c  tcsrcc-x1e80100.c  vdd-level-bengal.h  videocc-canoe.c  videocc-x1p42100.c
drivers/cpuidle/: Kconfig
drivers/cpuidle/governors/: modules.bzl  qcom-cluster-lpm.c  qcom-lpm.c  qcom-simple-cluster-lpm.c  qcom-simple-lpm-sysfs.c  qcom-simple-lpm.c  qcom-simple-lpm.h
drivers/dma-buf/heaps/: Kconfig  aizerofs  modules.bzl  qcom_carveout_heap.c  qcom_carveout_heap.h  qcom_cma_heap.c  qcom_dma_heap.c  qcom_dma_trace.h  qcom_dynamic_page_pool.c  qcom_secure_system_heap.c  qcom_secure_system_heap.h  qcom_sg_ops.c  qcom_sg_ops.h  qcom_system_heap.c  qcom_system_heap.h
drivers/dma/qcom/: msm_gpi.c
drivers/eom/: Kconfig  buffer_manager.c  buffer_manager.h  eom_driver.c  modules.bzl  pcie_eom_reg.h  phy_core.c
drivers/eom/pcie/: Kconfig  modules.bzl  pci_phy_access.c
drivers/firmware/qcom/: modules.bzl  qcom_scm.c  qcom_scm.h  qcom_tzmem.c  qtee_shmbridge.c
drivers/hwtracing/coresight/: coresight-tmc-core.c  coresight-tmc-etr.c
drivers/i2c/busses/: i2c-msm-geni.c  modules.bzl
drivers/iio/adc/: qcom-spmi-adc5-gen3.c
drivers/input/misc/: Kconfig  modules.bzl  qcom-hv-haptics.c  qpnp-power-on.c
drivers/interconnect/qcom/: Kconfig  modules.bzl  rpm-ids.h  x1e80100.c  x1e80100.h  x1p42100.c
drivers/irqchip/: Kconfig  modules.bzl  msm_show_resume_irq.c  qcom-mpm.c  qcom-pdc.c
drivers/leds/: leds-qti-flash.c  modules.bzl
drivers/leds/aw210xx/: leds_aw210xx.c  leds_aw210xx.h  modules.bzl
drivers/leds/flash/: modules.bzl
drivers/mailbox/: Kconfig  modules.bzl  qcom-apcs-ipc-mailbox.c
drivers/mmc/host/: cqhci-crypto-qti.c  sdhci-msm.c
drivers/net/: Kconfig  modules.bzl  virtio_net_fix.diff
drivers/net/pcs/: pcs-xpcs-qcom.c
drivers/pci/controller/: pci-msm.c
drivers/phy/qualcomm/: Kconfig  modules.bzl  phy-qcom-snps-eusb2.c
drivers/pinctrl/qcom/: Kconfig.msm  modules.bzl  pinctrl-bengal.c  pinctrl-khaje.c  pinctrl-malabar.c  pinctrl-msm.c  pinctrl-sa8797p.c  pinctrl-x1e80100.c
drivers/power/: modules.bzl
drivers/power/reset/: qcom-dload-mode.c  qcom-reboot-reason.c
drivers/power/supply/: Kconfig  modules.bzl  qti_battery_charger.c  qti_charger_boost_lib.c  qti_charger_boost_lib.h
drivers/regulator/: Kconfig  debug-regulator.c  modules.bzl  rpm-smd-regulator.c
drivers/remoteproc/: modules.bzl  qcom_common.c  qcom_common.h  qcom_q6v5.c  qcom_q6v5_pas.c
drivers/rpmsg/: Kconfig  glink_pkt.c  modules.bzl  qcom_glink_native.c  rpm-smd.c
drivers/soc/qcom/: Kconfig  charger-ulog-glink.c  cpu_phys_log_map.c  cpucp_fast.c  cpucp_log.c  cpuss_telemetry.c  crm-v2.c  dmesg_dumper.c  gic_intr_routing.c  glink_probe.c  hwkm.c  hwkm_serialize.h  hwkm_v1.h  hwkmregs.h  ice.c  llcc-qcom.c  memory_dump_v2.c  minidump_log.c  minidump_memory.c  minidump_rm.c  modules.bzl  power_state.c  qcom_aoss.c  qcom_cache_allocation.c  qcom_cpuss_sleep_stats_v4.c  qcom_fdcvs.c  qcom_ramdump.c  qcom_sdei.c  qcom_stats.c  qcom_wdt_core.c  (+10 more)
drivers/spi/: spi-msm-geni.c
include/: frame_boost  sched_assist
include/freq_qos_arbiter/: qos_arbiter.h
include/linux/: bwmon.h  bwmon_geas.h  cpu_phys_log_map.h  debug_symbol.h  geas_ctrl.h  habmm.h  ipa_usb.h  osi_healthinfo.h  phy_core.h  qcom-geni-se-common.h  sa_common.h  sa_group.h  sa_oemdata.h  sa_oemdata_mgr.h  sched_assist.h  trace-dcvs.h  walt.h
kleaf-scripts/: android_build.bzl  autogvmlv_build.bzl  dtbs.bzl  generic_le.bzl  generic_qtvm.bzl  le_build.bzl  modules_register.bzl  modules_unprotected.bzl  msm_kernel_extensions.bzl  vm_build.bzl
kleaf-scripts/targets/: autogvmlv.bzl  bengal.bzl  canoe.bzl  canoe_vms.bzl  hamoa.bzl  sun_vms.bzl  vienna_le.bzl  x1p42100.bzl
modules-lists/: modules.list.msm.autogvm  modules.list.msm.bengal  modules.list.msm.canoe  modules.list.msm.canoe-le  modules.list.msm.hamoa  modules.list.msm.lahaina  modules.list.msm.vienna  modules.list.msm.vienna-le  modules.list.msm.x1p42100  modules.systemdlkm_blocklist.msm.autogvm  modules.systemdlkm_blocklist.msm.canoe-le  modules.systemdlkm_blocklist.msm.hamoa  modules.vendor_blocklist.msm.autogvm  modules.vendor_blocklist.msm.bengal  modules.vendor_blocklist.msm.canoe  modules.vendor_blocklist.msm.canoe-le  modules.vendor_blocklist.msm.gen3auto  modules.vendor_blocklist.msm.lahaina  modules.vendor_blocklist.msm.pineapple  modules.vendor_blocklist.msm.sun  modules.vendor_blocklist.msm.vienna
net/: Kconfig  modules.bzl
net/mac80211/: mlme.c
net/qrtr/: af_qrtr.c  ns.c
net/sched/: Kconfig  modules.bzl
qcom_build_extensions/: BUILD.bazel
sound/usb/: modules.bzl  usb_audio_qmi_svc.c
(+138 files in other folders)
